--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -12,7 +12,9 @@
             ngModel
             name="username"
             required
+            #userNameEl="ngModel"
             >
+            <span class="help-block" *ngIf="userNameEl.invalid && userNameEl.touched"> invalid User Name </span>
           </div>
           <button class="btn btn-default" type="button">Suggest an Username</button>
           <div class="form-group">
@@ -25,8 +27,10 @@
             name="email"
             required
             email
+            #emailEl="ngModel"
             >
           </div>
+          <span class="help-block" *ngIf="emailEl.invalid && emailEl.touched"> invalid Email Address </span>
         </div>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
