--- a/forms-td-start/src/app/app.component.css
+++ b/forms-td-start/src/app/app.component.css
@@ -5,3 +5,10 @@
 input.ng-invalid.ng-touched {
   border: 1px solid red;
 }
+
+
+.user-data-warning{
+  background-color: red;
+  color: white;
+  font-size: larger;
+}
