--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -55,6 +55,17 @@
           [(ngModel)]="answer"></textarea>
         </div>
         <p>Your reply: {{answer}}</p>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input 
+            type="radio"
+            name="gender"
+            ngModel
+            [value]="gender"
+            >
+            {{gender}}
+          </label>
+        </div>
         <button 
         class="btn btn-primary" 
         type="submit"
