--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -18,7 +18,11 @@
             >
             <span class="help-block" *ngIf="userNameEl.invalid && userNameEl.touched"> invalid User Name </span>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button 
+          class="btn btn-default" 
+          type="button"
+          (click)="suggestUserName()"
+          >Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input 
